mutants.out.old/log/crates__job-registry__src__lib.rs_line_260_col_9.log

*** crates/job-registry/src/lib.rs:260:9: replace StoredJobNode::from_node -> Self with Default::default()

*** mutation diff:
--- crates/job-registry/src/lib.rs
+++ replace StoredJobNode::from_node -> Self with Default::default()
@@ -252,21 +252,17 @@
 struct StoredJobNode {
     node_id: String,
     status: StoredNodeRunStatus,
     attempts: u32,
 }
 
 impl StoredJobNode {
     fn from_node(node: &JobNode) -> Self {
-        Self {
-            node_id: node.node_id().as_str().to_string(),
-            status: node.status().into(),
-            attempts: node.attempts(),
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     fn into_node(self) -> Result<JobNode, JobStoreError> {
         JobNode::restore(self.node_id, self.status.into(), self.attempts)
             .map_err(JobError::InvalidNodeId)
             .map_err(JobStoreError::Job)
     }
 }


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=job-registry@0.1.0
       Fresh unicode-ident v1.0.24
       Fresh hashbrown v0.17.0
       Fresh equivalent v1.0.2
       Fresh toml_write v0.1.2
       Fresh node v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/node)
       Fresh winnow v0.7.15
       Fresh proc-macro2 v1.0.106
       Fresh indexmap v2.14.0
       Fresh workflow v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/workflow)
       Fresh quote v1.0.45
       Fresh serde_core v1.0.228
       Fresh job v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/job)
       Fresh syn v2.0.117
       Fresh serde_derive v1.0.228
       Fresh serde v1.0.228
       Fresh toml_datetime v0.6.11
       Fresh serde_spanned v0.6.9
       Fresh toml_edit v0.22.27
       Fresh toml v0.8.23
       Dirty job-registry v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/job-registry): couldn't read metadata for file `target/debug/deps/libjob_registry-1bee4245d242e5f5.rlib`
   Compiling job-registry v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/job-registry)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job_registry --edition=2024 crates/job-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=079db504f57319a5 -C extra-filename=-43654634db541f6b --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps --extern job=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libjob-989a3b77c2d83e11.rlib --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rlib --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rlib --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rlib --extern workflow=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libworkflow-8f9285c1db0b2396.rlib`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job_registry --edition=2024 crates/job-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=dc2a9318434d402c -C extra-filename=-1bee4245d242e5f5 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps --extern job=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libjob-989a3b77c2d83e11.rmeta --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rmeta --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rmeta`
error[E0277]: the trait bound `StoredJobNode: Default` is not satisfied
   --> crates/job-registry/src/lib.rs:260:9
    |
260 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `StoredJobNode`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `job-registry` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job_registry --edition=2024 crates/job-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=079db504f57319a5 -C extra-filename=-43654634db541f6b --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps --extern job=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libjob-989a3b77c2d83e11.rlib --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rlib --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rlib --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rlib --extern workflow=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libworkflow-8f9285c1db0b2396.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `job-registry` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job_registry --edition=2024 crates/job-registry/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=dc2a9318434d402c -C extra-filename=-1bee4245d242e5f5 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps --extern job=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libjob-989a3b77c2d83e11.rmeta --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde-9d56c8f99faab1ce.rmeta --extern toml=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libtoml-3f2b5ed09ad10256.rmeta` (exit status: 1)

*** result: Failure(101)
